tests/regression/errors/basic/type_error_18.csd
// Type error test 18
sus number drip = 18
sus text tea = "string_18"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 18:", wrong)
